[metadata]
name = SpaceFlow
version = 0.1.0
description = Identifying Spatiotemporal Patterns of Cells for Spatial Transcriptome Data
author = Honglei Ren
author_email = hongleir1@gmail.com

[options]
packages = find:
install_requires =
    numpy
    scipy
    pandas
    anndata
    gudhi>=3.4.1
    matplotlib
    networkx
    notebook
    scanpy
    squidpy
    scikit-learn
    torch==1.9.0
    torch-geometric==1.7.2
    torch-sparse==0.6.11
    torch-scatter==2.0.8
